- A?adido el editor de Productos y Categor?as. - Lavado de cara del visor de facturas.

--- a/app/Bar/Bar/presentation/BillDialog.xaml
+++ b/app/Bar/Bar/presentation/BillDialog.xaml
@@ -17,29 +17,37 @@
                 <ColumnDefinition Width="0.25*" />
                 <ColumnDefinition Width="0.25*" />
             </Grid.ColumnDefinitions>
-            <Button Content="Cancelar" Grid.Column="2" Height="Auto" HorizontalAlignment="Stretch" Margin="10,5" Name="btnCancel" VerticalAlignment="Stretch" Width="Auto" Click="btnCancel_Click" />
+            <Button Content="Cancelar" Grid.Column="2" Height="Auto" HorizontalAlignment="Stretch" Margin="10,5" Name="btnCancel" VerticalAlignment="Stretch" Width="Auto" Click="btnCancel_Click" FontWeight="Bold" />
             <Button Content="PAGADA" Grid.Column="3" Height="Auto" HorizontalAlignment="Stretch" Margin="10,5" Name="btnCharge" VerticalAlignment="Stretch" Width="Auto" FontWeight="Bold" Click="btnCharge_Click" />
-            <Button Content="Imprimir" Height="Auto" HorizontalAlignment="Stretch" Margin="10,5,60,5" Name="btnPrint" VerticalAlignment="Stretch" Width="Auto" Click="btnPrint_Click" />
+            <Button Content="Imprimir" Height="Auto" HorizontalAlignment="Stretch" Margin="10,5,60,5" Name="btnPrint" VerticalAlignment="Stretch" Width="Auto" Click="btnPrint_Click" FontWeight="Bold" />
         </Grid>
         <Grid Grid.Row="3" Height="Auto" HorizontalAlignment="Stretch" Margin="5,2" Name="grid3" VerticalAlignment="Stretch" Width="Auto" Background="{x:Null}">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="0.33*" />
-                <ColumnDefinition Width="0.17*" />
-                <ColumnDefinition Width="0.17*" />
-                <ColumnDefinition Width="0.33*" />
+                <ColumnDefinition Width="0.25*" />
+                <ColumnDefinition Width="0.05*" />
+                <ColumnDefinition Width="0.15*" />
+                <ColumnDefinition Width="0.05*" />
+                <ColumnDefinition Width="0.15*" />
+                <ColumnDefinition Width="0.05*" />
+                <ColumnDefinition Width="0.25*" />
+                <ColumnDefinition Width="0.05*" />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="0.5*" />
                 <RowDefinition Height="0.5*" />
             </Grid.RowDefinitions>
-            <Label Content="Base imponible" Height="Auto" HorizontalAlignment="Stretch" Margin="0" Name="label1" VerticalAlignment="Stretch" Width="Auto" FontSize="12" FontWeight="Bold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Foreground="Black" />
-            <Label Content="IVA" Grid.Column="1" Height="Auto" HorizontalAlignment="Stretch" Margin="0" Name="label2" VerticalAlignment="Stretch" Width="Auto" FontSize="12" FontWeight="Bold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Foreground="Black" />
-            <Label Content="Cuota" Grid.Column="2" Height="Auto" HorizontalAlignment="Stretch" Margin="0" Name="label3" VerticalAlignment="Stretch" Width="Auto" FontSize="12" FontWeight="Bold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Foreground="Black" />
-            <Label Content="TOTAL" Grid.Column="3" Height="Auto" HorizontalAlignment="Stretch" Margin="10,0" Name="label4" VerticalAlignment="Stretch" Width="Auto" FontSize="12" FontWeight="Bold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Background="Gray" />
-            <TextBox Grid.Row="1" Height="Auto" HorizontalAlignment="Stretch" Margin="10,2" Name="txtbTaxBase" VerticalAlignment="Stretch" Width="Auto" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" IsReadOnly="True" FontWeight="Bold" />
-            <TextBox Grid.Column="1" Grid.Row="1" Height="Auto" HorizontalAlignment="Stretch" Margin="10,2" Name="txtbIVA" VerticalAlignment="Stretch" Width="Auto" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" IsReadOnly="True" FontWeight="Bold" />
-            <TextBox Grid.Column="2" Grid.Row="1" Height="Auto" HorizontalAlignment="Stretch" Margin="10,2" Name="txtbQuote" VerticalAlignment="Stretch" Width="Auto" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" IsReadOnly="True" FontWeight="Bold" />
-            <TextBox Grid.Column="3" Grid.Row="1" Height="Auto" HorizontalAlignment="Stretch" Margin="10,2" Name="txtbTotal" VerticalAlignment="Stretch" Width="Auto" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" IsReadOnly="True" FontWeight="Bold" />
+            <Label Content="Base imponible" Height="Auto" HorizontalAlignment="Stretch" Name="label1" VerticalAlignment="Stretch" FontSize="12" FontWeight="Bold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Foreground="Black" Grid.ColumnSpan="2" />
+            <Label Content="IVA" Grid.Column="2" Height="Auto" HorizontalAlignment="Stretch" Name="label2" VerticalAlignment="Stretch" Width="Auto" FontSize="12" FontWeight="Bold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Foreground="Black" Grid.ColumnSpan="2" />
+            <Label Content="Cuota" Grid.Column="4" Height="Auto" HorizontalAlignment="Stretch" Name="label3" VerticalAlignment="Stretch" Width="Auto" FontSize="12" FontWeight="Bold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Foreground="Black" Grid.ColumnSpan="2" />
+            <Label Content="TOTAL" Grid.Column="6" Height="Auto" HorizontalAlignment="Stretch" Margin="10,0" Name="label4" VerticalAlignment="Stretch" Width="Auto" FontSize="12" FontWeight="Bold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Background="Gray" Grid.ColumnSpan="2" />
+            <TextBox Grid.Row="1" Height="Auto" HorizontalAlignment="Stretch" Margin="10,2,0,2" Name="txtbTaxBase" VerticalAlignment="Stretch" Width="Auto" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" IsReadOnly="True" FontWeight="Bold" Grid.ColumnSpan="1" />
+            <TextBox Grid.Column="2" Grid.Row="1" Height="Auto" HorizontalAlignment="Stretch" Margin="10,2,0,2" Name="txtbIVA" VerticalAlignment="Stretch" Width="Auto" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" IsReadOnly="True" FontWeight="Bold" Grid.ColumnSpan="1" />
+            <TextBox Grid.Column="4" Grid.Row="1" Height="Auto" HorizontalAlignment="Stretch" Margin="10,2,0,2" Name="txtbQuote" VerticalAlignment="Stretch" Width="Auto" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" IsReadOnly="True" FontWeight="Bold" Grid.ColumnSpan="1" />
+            <TextBox Grid.Column="6" Grid.Row="1" Height="Auto" HorizontalAlignment="Stretch" Margin="10,2,0,2" Name="txtbTotal" VerticalAlignment="Stretch" Width="Auto" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" IsReadOnly="True" FontWeight="Bold" Grid.ColumnSpan="1" />
+            <Label Content="€" Grid.Column="1" Grid.Row="1" Height="Auto" HorizontalAlignment="Stretch" Margin="0" Name="label9" VerticalAlignment="Stretch" Width="Auto" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontWeight="Bold" />
+            <Label Content="%" Grid.Column="3" Grid.Row="1" Height="Auto" HorizontalAlignment="Stretch" Margin="0" Name="label10" VerticalAlignment="Stretch" Width="Auto" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontWeight="Bold" />
+            <Label Content="€" Grid.Column="5" Grid.Row="1" Height="Auto" HorizontalAlignment="Stretch" Margin="0" Name="label11" VerticalAlignment="Stretch" Width="Auto" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontWeight="Bold" />
+            <Label Content="€" Grid.Column="7" Grid.Row="1" Height="Auto" HorizontalAlignment="Stretch" Margin="0" Name="label12" VerticalAlignment="Stretch" Width="Auto" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontWeight="Bold" />
         </Grid>
         <Grid Height="Auto" HorizontalAlignment="Stretch" Margin="5,2" Name="grid4" VerticalAlignment="Stretch" Width="Auto" Background="{x:Null}">
             <Grid.ColumnDefinitions>
@@ -112,12 +120,15 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="0.5*" />
                 <ColumnDefinition Width="0.25*" />
-                <ColumnDefinition Width="0.25*" />
+                <ColumnDefinition Width="0.2*" />
+                <ColumnDefinition Width="0.05*" />
             </Grid.ColumnDefinitions>
             <Label Content="Subtotal" Grid.Column="1" Height="Auto" HorizontalAlignment="Stretch" Margin="0" Name="label5" VerticalAlignment="Stretch" Width="Auto" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" FontWeight="Bold" />
             <Label Content="Descuento" Grid.Column="1" Grid.Row="1" Height="Auto" HorizontalAlignment="Stretch" Margin="0" Name="label6" VerticalAlignment="Stretch" Width="Auto" FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" />
-            <TextBox Grid.Column="2" Height="Auto" HorizontalAlignment="Stretch" Margin="10,2" Name="txtbSubtotal" VerticalAlignment="Stretch" Width="Auto" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontWeight="Bold" />
-            <TextBox Grid.Column="2" Grid.Row="1" Height="Auto" HorizontalAlignment="Stretch" Margin="10,2" Name="txtbDiscount" VerticalAlignment="Stretch" Width="Auto" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontWeight="Bold" />
+            <TextBox Grid.Column="2" Height="Auto" HorizontalAlignment="Stretch" Margin="10,2,0,2" Name="txtbSubtotal" VerticalAlignment="Stretch" Width="Auto" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontWeight="Bold" Grid.ColumnSpan="1" />
+            <TextBox Grid.Column="2" Grid.Row="1" Height="Auto" HorizontalAlignment="Stretch" Margin="10,2,0,2" Name="txtbDiscount" VerticalAlignment="Stretch" Width="Auto" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontWeight="Bold" Grid.ColumnSpan="1" />
+            <Label Content="€" Grid.Column="3" Height="Auto" HorizontalAlignment="Stretch" Margin="0" Name="label7" VerticalAlignment="Stretch" Width="Auto" FontWeight="Bold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" />
+            <Label Content="%" Grid.Column="3" Grid.Row="1" Height="Auto" HorizontalAlignment="Stretch" Margin="0" Name="label8" VerticalAlignment="Stretch" FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" />
         </Grid>
     </Grid>
 </Window>
